--- a/main.css
+++ b/main.css
@@ -3,14 +3,23 @@ body
   background-color: #ffe3e3;
 }
 
+h1,h2,h3,p
+{
+  margin: auto;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 h1
 {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: auto;
-    text-align: center;
     color: #c60066;
     background-color: white;
+}
+
+.footer
+{
+  background-color: white;
 }
 
 img
