--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,16 @@
+body {
+  background-color: #ffe3e3;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0; }
 
+h1 {
+  color: #c60066; }
+
+h1, h2, h3, p {
+  margin: auto;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 /*# sourceMappingURL=app.css.map */
