--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,9 +1,10 @@
 body
   background-color: #ffe3e3
   font-family: sans-serif
-  margin: 0
-  padding: 0
+  margin-top: -10px
+  padding: 0 10px 20px
   text-align: center
 
 h1
   color: #c60066
+  padding: 15px
